# blitz-replays

./: .gitignore  LICENSE  README.ipynb  README.md  export.txt  pyproject.toml  tanks.json  update_docs.sh
.github/workflows/: python-app-macos-windows.yml  python-app.yml
src/blitzreplays/: blitzdata.py  blitzreplays.py  click_test_single.py  click_test_split.py  maps.json  maps.py  replays_upload.py  tankopedia.py
src/blitzreplays/files/: tanks.json
src/blitzreplays/metadata/: maps.py  tankopedia.py
src/blitzreplays/replays/: analyze.py  analyze_fields.py  analyze_info.py  analyze_models.py  analyze_old.py_  analyze_reports.py  args.py  cache.py  config.toml  dbcache.py  models_fields.py  models_replay.py  models_reports.py  player_stats.py  types.py  upload.py
src/blitzreplays/test/: test_group.py
tests/: 01_Tankopedia_new.json  02_maps_new.json  02_maps_old.json  20240101_0124__jylpah_M48A1_49248854089005095.wotbreplay  20240106_1649__jylpah_Pl22_CS_59_2318488532804003941.wotbreplay  analyze_config.toml  example.toml  test_blitzdata.py  test_blitzreplays.py  test_tankopedia.py
tests/BlitzApp/Data/: maps.yaml.dvpl
tests/BlitzApp/Data/Strings/: ar.yaml  cs.yaml  de.yaml  en.yaml  en_GB.yaml  es.yaml  fi.yaml  fr.yaml  it.yaml  ja.yaml  ko.yaml  pl.yaml  pt.yaml  ru.yaml  th.yaml  tr.yaml  uk.yaml  vi.yaml  zh-Hans.yaml  zh-Hant.yaml
tests/BlitzApp/Data/XML/item_defs/vehicles/china/: CH38_WZ113G-FT.xml.dvpl  Ch01_Type59.xml.dvpl  Ch02_Type62.xml.dvpl  Ch03_WZ-111.xml.dvpl  Ch04_T34_1.xml.dvpl  Ch05_T34_2.xml.dvpl  Ch06_Renault_NC31.xml.dvpl  Ch07_Vickers_MkE_Type_BT26.xml.dvpl  Ch08_Type97_Chi_Ha.xml.dvpl  Ch09_M5.xml.dvpl  Ch10_IS2.xml.dvpl  Ch11_110.xml.dvpl  Ch12_111_1_2_3.xml.dvpl  Ch14_T34_3.xml.dvpl  Ch15_59_16.xml.dvpl  Ch15_59_16_BP.xml.dvpl  Ch16_WZ_131.xml.dvpl  Ch17_WZ131_1_WZ132.xml.dvpl  Ch18_WZ-120.xml.dvpl  Ch19_121.xml.dvpl  Ch20_Type58.xml.dvpl  Ch21_T34.xml.dvpl  Ch22_113.xml.dvpl  Ch23_112.xml.dvpl  Ch24_Type64.xml.dvpl  Ch25_121_mod_1971B.xml.dvpl  Ch26_59_Patton.xml.dvpl  Ch28_WZ_132A.xml.dvpl  Ch29_Type_62C_prot.xml  Ch29_Type_62C_prot.xml.dvpl  Ch34_WZ-131G_FT.xml.dvpl  Ch34_WZ-131G_FT_BP.xml.dvpl  Ch35_T-34-2G_FT.xml.dvpl  Ch36_WZ-111-1G_FT.xml.dvpl  Ch37_WZ-111G_FT.xml.dvpl  Ch39_WZ120_1G_FT.xml.dvpl  Ch41_WZ_111_5A.xml.dvpl  Ch42_M41D.xml.dvpl  Ch43_WZ-122_2.xml.dvpl  Ch44_114_SP2.xml  (+10 more)
tests/BlitzApp/Data/XML/item_defs/vehicles/common/: camouflages.xml  combat_roles.yaml  optional_device_slots.xml  vehicle.xml
tests/BlitzApp/Data/XML/item_defs/vehicles/european/: Cz02_T50.xml.dvpl  Cz04_T50_51.xml.dvpl  Cz05_T34-100.xml.dvpl  Cz07_TVP_46.xml.dvpl  Cz08_T-25.xml.dvpl  Cz08_T-25BP.xml.dvpl  Cz08_T-25BPS.xml.dvpl  Cz13_T-27.xml.dvpl  Cz14_Skoda_T-56.xml.dvpl  Cz15_Skoda_T-45.xml.dvpl  Cz16_TNH_T_vz51.xml.dvpl  Cz17_Vz_55.xml  Cz17_Vz_55.xml.dvpl  Cz18_TNH_105_1000.xml.dvpl  Cz19_Vz_44_1.xml.dvpl  Cz29_Skoda_P-JS.xml.dvpl  F01_Vickers_MkF.xml.dvpl  It08_Progetto_M40_mod65.xml  It08_Progetto_M40_mod65.xml.dvpl  It09_P43_ter.xml.dvpl  It10_P43_BD.xml.dvpl  It10_P43_bis.xml.dvpl  (+41 more)
tests/replays-analyze/: 20231228_1718__jylpah_Ch28_WZ_132A_13421959187370440.wotbreplay.json  20231228_1725__jylpah_Ch28_WZ_132A_2319467102446916464.wotbreplay.json  20231228_1729__jylpah_Ch28_WZ_132A_13425420931011670.wotbreplay.json  20231228_1734__jylpah_Ch28_WZ_132A_2318998195097408891.wotbreplay.json  20231229_2320__jylpah_Ch28_WZ_132A_2319051031785191432.wotbreplay.json  20231229_2325__jylpah_Ch28_WZ_132A_16288282921875788.wotbreplay.json  20231229_2329__jylpah_Ch28_WZ_132A_2319054927320529437.wotbreplay.json  20231229_2333__jylpah_Ch28_WZ_132A_15151542517578540.wotbreplay.json  20231229_2347__jylpah_Ch28_WZ_132A_2321470756230217301.wotbreplay.json  20231229_2353__jylpah_Ch28_WZ_132A_2319442466514616263.wotbreplay.json  20231229_2356__jylpah_Ch28_WZ_132A_2319052045397475444.wotbreplay.json  20231230_0508__jylpah_Ch28_WZ_132A_31328996399483330.wotbreplay.json  20231230_0512__jylpah_Ch28_WZ_132A_31328631327263406.wotbreplay.json  20231230_0516__jylpah_Ch28_WZ_132A_31328081571449762.wotbreplay.json  20231230_0520__jylpah_Ch28_WZ_132A_25011979975363731.wotbreplay.json  20231230_0524__jylpah_Ch28_WZ_132A_31328184650665347.wotbreplay.json  20231230_0528__jylpah_Ch28_WZ_132A_31329103773666917.wotbreplay.json  20231230_0533__jylpah_Ch28_WZ_132A_31328090161385379.wotbreplay.json  20231230_0538__jylpah_Ch28_WZ_132A_41965946764497091.wotbreplay.json  20231230_0545__jylpah_Ch28_WZ_132A_15151791625704003.wotbreplay.json  20231230_0549__jylpah_Ch28_WZ_132A_21318269446099767.wotbreplay.json  20231231_0016__jylpah_Ch28_WZ_132A_2318749679699924678.wotbreplay.json  20231231_0021__jylpah_Ch28_WZ_132A_2319581309922482166.wotbreplay.json  20231231_0025__jylpah_Ch28_WZ_132A_18013528335096052.wotbreplay.json  20231231_0032__jylpah_Ch28_WZ_132A_13827597373839967.wotbreplay.json  20231231_0036__jylpah_Ch28_WZ_132A_13832261708323691.wotbreplay.json  20231231_0040__jylpah_Ch28_WZ_132A_18014206939929701.wotbreplay.json  20231231_0046__jylpah_Ch28_WZ_132A_13832884478582204.wotbreplay.json  20231231_0051__jylpah_Ch28_WZ_132A_13826429142736610.wotbreplay.json  20231231_0056__jylpah_Pl22_CS_59_2318750435614171179.wotbreplay.json  20231231_0101__jylpah_Pl22_CS_59_13828529381744983.wotbreplay.json  20231231_1613__jylpah_Ch28_WZ_132A_3468383670309582572.wotbreplay.json  20231231_1618__jylpah_Ch28_WZ_132A_3468388235859818547.wotbreplay.json  20231231_1622__jylpah_Ch28_WZ_132A_3468390456357910807.wotbreplay.json
(+267 files in other folders)
