[project]
name = "blitz-replays"
version = "0.3"
authors = [{ name = "Jylpah", email = "jylpah@gmail.com" }]
description = "Tool to upload and analyze Wargaming's World of Tanks Blitz game repolays"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: aiohttp",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiofiles>=23.1.0",
    "aiohttp>=3.8.4",
    # "aiosqlite>=0.19.0",
    "alive-progress>=3.1.1",
    "xmltodict>=0.13.0",
    "aiostream>=0.5.0",
    # "asyncstdlib>=3.10.6", 
    # "isort>=5.12.0",	
    "pydantic>=1.10.7, == 1.*",
    # "motor>=3.1.2",
    # "pymongo>=4.3.3",
    # "lz4>=4.3.2",
    "sortedcollections>=2.1.0",
    "PyYAML>=6.0",
    "blitz-utils @ git+https://github.com/Jylpah/blitz-utils.git",
    "dvplc @ git+https://github.com/Jylpah/dvplc.git",
]

[project.optional-dependencies]
dev = [
    "build>=0.10.0",
    "mypy>=1.2.0",
    #	"mypy==1.2.0",
    "pip-chill>=1.0.3",
    #"pip-chill==1.0.3",
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=4.1.0",
    "pytest-datafiles",
    "yappi>=1.4.0",
    "types-aiofiles>=23.1.0.1",
    "types-requests>=2.28.11.17",
    "types-PyYAML>=6.0.12.10",
    # "pyutils[dev] @ git+https://github.com/Jylpah/pyutils.git@dev",
    # "blitz-utils[dev] @ git+https://github.com/Jylpah/blitz-utils.git",
]


[project.urls]
"Homepage" = "https://github.com/Jylpah/blitz-replays"
"Bug Tracker" = "https://github.com/Jylpah/blitz-replays/issues"

[project.scripts]
blitz-replays = "blitzreplays.blitzreplays:cli_main"
blitz-data = "blitzreplays.blitzdata:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.build.targets.wheel]
packages = ["src/blitzreplays"]


[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ['^blitz.*\.py']


[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = false
warn_required_dynamic_aliases = false
warn_untyped_fields = true


[tool.black]
# line-length = 88
include = '\.pyi?$'


[tool.pyright]
reportGeneralTypeIssues = false
reportInvalidStringEscapeSequence = false


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=src"
testpaths = ["tests"]
filterwarnings = [
    'ignore:Inheritance class ThrottledClientSession from ClientSession is discouraged:DeprecationWarning',
    'ignore::coverage.control.CoverageWarning:coverage.control',
]
