[project]
name = "blitz-replays"
version = "0.5.18"
authors = [{ name = "Jylpah", email = "jylpah@gmail.com" }]
description = "Tool to upload and analyze Wargaming's World of Tanks Blitz game repolays"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: aiohttp",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiofiles>=23.1.0",
    "aiohttp>=3.8.4",
    "aiosqlite>=0.19.0",
    "alive-progress>=3.1.1",
    "aiostream>=0.5.0",
    "pydantic>=2.4.2",
    "PyYAML>=6.0",
    "sortedcollections>=2.1.0",
    "tabulate>=0.9.0",
    "tomlkit>=0.12.3",
    "typer>=0.9.0",
    "xmltodict>=0.13.0",
    "blitz-models @ git+https://github.com/Jylpah/blitz-models.git",
    "dvplc @ git+https://github.com/Jylpah/dvplc.git",
]

[project.optional-dependencies]
dev = [
    "build>=0.10.0",
    "jupyter>=1.0.0",
    "mypy>=1.8.0",
    "pip-chill>=1.0.3",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "pytest-datafiles>=3.0.0",
    "ruff>=0.1.9",
    "yappi>=1.4.0",
    "types-aiofiles>=23.1.0.1",
    "types-requests>=2.28.11.17",
    "types-PyYAML>=6.0.12.10",
]


[project.urls]
"Homepage" = "https://github.com/Jylpah/blitz-replays"
"Bug Tracker" = "https://github.com/Jylpah/blitz-replays/issues"

[project.scripts]
blitz-replays = "blitzreplays.blitzreplays:app"
blitz-data = "blitzreplays.blitzdata:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.build.targets.wheel]
packages = ["src/blitzreplays"]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ['^blitz.*\.py', "tmp"]
# mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
mypy_path = ['src']


[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = false
warn_required_dynamic_aliases = false
warn_untyped_fields = true

[tool.ruff]
# line-length = 88
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
indent-width = 4
extend-include = ["*.ipynb"]
extend-exclude = [".venv", ".vscode", "/usr/lib/**"]
fixable = ["ALL"]


[tool.pyright]
reportGeneralTypeIssues = false
reportInvalidStringEscapeSequence = false


[tool.pytest.ini_options]
minversion = "7.4"
addopts = ["-v", "--cov=src"]
testpaths = ["tests"]
pythonpath = "src" # avoid import path append in test files
filterwarnings = [
    'ignore:Inheritance class ThrottledClientSession from ClientSession is discouraged:DeprecationWarning',
    'ignore::coverage.control.CoverageWarning:coverage.control',
]
